[gd_scene load_steps=9 format=2]

[ext_resource path="res://menu/items/m_Item2.png" type="Texture" id=1]
[ext_resource path="res://menu/choose_magic/choose_magic.gd" type="Script" id=2]
[ext_resource path="res://menu/items/expanded.png" type="Texture" id=3]
[ext_resource path="res://style/Fonts/deafult_font.tres" type="DynamicFont" id=4]
[ext_resource path="res://magic/1.png" type="Texture" id=5]
[ext_resource path="res://menu/items/m_Item5.png" type="Texture" id=6]
[ext_resource path="res://items/16x16/pearl_01b.png" type="Texture" id=7]
[ext_resource path="res://items/16x16/gem_01a.png" type="Texture" id=8]

[node name="choose_magic" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="background"]
margin_left = 85.0
margin_top = 7.0
margin_right = 235.0
margin_bottom = 27.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="background/TextureRect"]
margin_left = 39.0
margin_top = -1.0
margin_right = 128.0
margin_bottom = 19.0
custom_colors/font_color = Color( 0.282353, 0.0470588, 0.0470588, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Выбор магии"

[node name="magic1" type="Button" parent="background"]
margin_left = 74.0
margin_top = 43.0
margin_right = 246.0
margin_bottom = 84.0
icon = ExtResource( 6 )
flat = true

[node name="Label_magic_1" type="Label" parent="background/magic1"]
margin_left = 39.0
margin_top = 7.0
margin_right = 128.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0.282353, 0.0470588, 0.0470588, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Выбор магии"

[node name="TextureRect1" type="TextureRect" parent="background/magic1"]
margin_left = 13.0
margin_top = 8.0
margin_right = 29.0
margin_bottom = 24.0
rect_scale = Vector2( 1.50756, 1.37484 )
texture = ExtResource( 7 )

[node name="magic2" type="Button" parent="background"]
margin_left = 74.0
margin_top = 91.0
margin_right = 246.0
margin_bottom = 132.0
icon = ExtResource( 6 )
flat = true

[node name="Label_magic_2" type="Label" parent="background/magic2"]
margin_left = 39.0
margin_top = 9.0
margin_right = 128.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0.282353, 0.0470588, 0.0470588, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Выбор магии"

[node name="TextureRect3" type="TextureRect" parent="background/magic2"]
margin_left = -10.0
margin_top = -12.0
margin_right = 54.0
margin_bottom = 52.0
texture = ExtResource( 5 )

[node name="magic3" type="Button" parent="background"]
margin_left = 75.0
margin_top = 139.0
margin_right = 247.0
margin_bottom = 180.0
icon = ExtResource( 6 )
flat = true

[node name="Label_magic_3" type="Label" parent="background/magic3"]
margin_left = 38.0
margin_top = 8.0
margin_right = 127.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0.282353, 0.0470588, 0.0470588, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Выбор магии"

[node name="TextureRect2" type="TextureRect" parent="background/magic3"]
margin_left = 14.0
margin_top = 9.0
margin_right = 35.0
margin_bottom = 33.0
rect_scale = Vector2( 1.35375, 1.41852 )
texture = ExtResource( 8 )

[connection signal="pressed" from="background/magic1" to="." method="_on_magic1_pressed"]
[connection signal="pressed" from="background/magic2" to="." method="_on_magic2_pressed"]
[connection signal="pressed" from="background/magic3" to="." method="_on_magic3_pressed"]
